add initial page structure

--- a/my-first-website.html
+++ b/my-first-website.html
@@ -3,6 +3,7 @@
     <title>my first webpage!</title>
   </head>
   <body>
-
+    hello, world!
+      welcome to my first webpage!
   </body>
 </html>>
