--- a/my-first-website.html
+++ b/my-first-website.html
@@ -3,7 +3,7 @@
     <title>my first webpage!</title>
   </head>
   <body>
-    hello, world!
-      welcome to my first webpage!
+    <p>hello, world!</p>
+    <p>welcome to my first webpage!</p>
   </body>
 </html>>
