add list elements

--- a/my-first-website.html
+++ b/my-first-website.html
@@ -5,8 +5,16 @@
   <body>
       <h1>my first webpage</h1>
       <h2>written with a little guidance from Moringa school</h2>
-      
+
     <p>hello, world!</p>
     <p>welcome to my first webpage!</p>
+
+    <p>here are some things i'm going to learn about coding</p>
+    <ul>
+      <li>Html</li>
+      <li>Css</li>
+      <li>Javascript</li>
+      <li>And a lot more</li>
+    </ul>
   </body>
 </html>
