add inline elements

--- a/my-first-website.html
+++ b/my-first-website.html
@@ -4,17 +4,21 @@
   </head>
   <body>
       <h1>my first webpage</h1>
-      <h2>written with a little guidance from Moringa school</h2>
+      <h2>written with a little guidance from <em>Moringa school</em></h2>
 
     <p>hello, world!</p>
-    <p>welcome to my first webpage!</p>
+    <p>welcome to my<strong>first webpage!</p>
 
     <p>here are some things i'm going to learn about coding</p>
+    <p>check out<a href="http://moringsschool.com">Moringa School</a>. It"s a great place to learn web developmrnt skills</p>
+    <p>Here is a link to my <a href="favorite-things.html">favorite things<?a>.</p>
+      <img src="img src="elephant.jpg" alt="a photo of an elephant">
+      <img src="img src="images/elephant.jpg" alt="a photo of an elephant">
     <ul>
       <li>Html</li>
       <li>Css</li>
       <li>Javascript</li>
-      <li>And a lot more</li>
+      <li>And a lot more</
     </ul>
   </body>
 </html>
